--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
   "homepage": "https://github.com/neverendingqs/netlify-express#readme",
   "dependencies": {},
   "devDependencies": {
-    "body-parser": "^1.19.0",
+    "eosjs": "^22.0.0",
     "express": "^4.17.1",
+    "nodemon": "^1.19.1",
+    "node-fetch": "^2.6.1",
+    "text-encoding": "^0.7.0",
+    "body-parser": "^1.19.0",
     "netlify-lambda": "^1.6.3",
-    "nodemon": "^1.19.2",
     "serverless-http": "^2.3.0"
   }
 }
