--- a/package.json
+++ b/package.json
@@ -21,7 +21,16 @@
     "url": "https://github.com/neverendingqs/netlify-express/issues"
   },
   "homepage": "https://github.com/neverendingqs/netlify-express#readme",
-  "dependencies": {},
+  "dependencies": {
+    "eosjs": "^22.0.0",
+    "express": "^4.17.1",
+    "nodemon": "^1.19.1",
+    "node-fetch": "^2.6.1",
+    "text-encoding": "^0.7.0",
+    "body-parser": "^1.19.0",
+    "netlify-lambda": "^1.6.3",
+    "serverless-http": "^2.3.0"
+  },
   "devDependencies": {
     "eosjs": "^22.0.0",
     "express": "^4.17.1",
