--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
     "url": "https://github.com/neverendingqs/netlify-express/issues"
   },
   "homepage": "https://github.com/neverendingqs/netlify-express#readme",
-  "dependencies": {},
+  "dependencies": {
+    "eosjs": "^22.0.0",
+    "node-fetch": "^2.6.1",
+    "text-encoding": "^0.7.0"
+  },
   "devDependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
